fix: dark mode

--- a/components/header/header.module.scss
+++ b/components/header/header.module.scss
@@ -27,6 +27,7 @@
   margin: 0;
   filter: var(--filter);
   transition: filter 0.5s;
+  line-height: 0;
 }
 
 .nav{
