--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,6 +4,9 @@ body {
   margin: 0;
   font-family: Nunito Sans, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu,
     Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+}
+
+body {
   --bg: white;
   --bg-button: #000000d9;
   --bg-highlight: #000000d9;
